# 2026-04-21-stock-sentiment-analyzer-2

./: .env.example  README.md  pyproject.toml
data/: sample_headlines.json
src/stock_sentiment_analyzer/: __init__.py  analyzer.py  cli.py  data_sources.py  webapp.py
tests/: test_analyzer.py
web/: app.css  app.js  index.html
