[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-sentiment-analyzer"
version = "0.1.0"
description = "Analyze sentiment in stock-related news headlines."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
stock-sentiment = "stock_sentiment_analyzer.cli:main"
